# BackDoor-Attack-with-fedGAN-in-edge-computing

./: .gitignore  README.md  config.py  my_patch.patch  test-gan.py
client/: client.py
federated-learning/: .gitignore  README.md  pyproject.toml  run.sh
federated-learning/federated_learning/: client_app.py  config.py  gan_model.py  server_app.py  task.py  test.py
federated-learning/federated_learning/device_exp/: client_app.py  server_app.py
federated-learning/federated_learning/model/: gan_model.py  quantization_cnn.py  quantization_gan.py  task.py
federated-learning/federated_learning/simulation_exp/: client_app.py  server_app.py
federated-learning/federated_learning/test/: gan-metrics.py  time_metrics.py
federated-learning/federated_learning/ultility/: config.py
federated-learning/model_state_dict/cnn/: net_model_nes-pgd-imp0.3Clean-label.pt
federated-learning/model_state_dict/gan/: D_checkpoint.pt  G_checkpoint.pt
federated-learning/scripts/: cpu_mem.sh  device_start.sh  monitor.sh  plot_results.py  simulation_start.sh
gan-mnist/: README.md  pyproject.toml
gan-mnist/gan_mnist/: __init__.py  client_app.py  server_app.py  task.py
server/: server.py
