[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gan-mnist"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nhanhlt"

[tool.flwr.app.components]
serverapp = "gan_mnist.server_app:app"
clientapp = "gan_mnist.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 0.4
local-epochs = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20