[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gan-mnist"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nhanhlt"

[tool.flwr.app.components]
serverapp = "gan_mnist.server_app:app"
clientapp = "gan_mnist.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 0.5
local-epochs = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 15
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 1 CPU (default is 2)
options.backend.client-resources.num-gpus = 0.25 # each ClientApp uses 25% of VRAM (default is 0.0)